--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "vue": "^3.4.29",
+    "vue-router": "^4.4.5",
     "vue3-cookies": "^1.0.6"
   },
   "devDependencies": {
