--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.7",
+    "cors": "^2.8.5",
+    "express": "^4.21.1",
+    "tinkoff-invest-api": "^6.1.0",
     "vue": "^3.4.29",
     "vue-router": "^4.4.5",
     "vue3-cookies": "^1.0.6"
